--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -18,7 +18,7 @@
         </div>
         <div class="job-contact">
             <h2>Contact Cooney Consulting & Recruiting</h2>
-            <a href = "mailto: cathy@cooneycr.com" id ="email-link"><h3>EMAIL: CATHY@COONEYCR.COM</h3></a>
+            <a href = "mailto: cathy@cooneycr.com" class ="email"><h3>EMAIL: CATHY@COONEYCR.COM</h3></a>
             <h3>PHONE: (303) 881-6083</h3>
             <img class="job-contact-logo" src="../images/logo.png">
         </div>
