--- a/public/stylesheets/posting.css
+++ b/public/stylesheets/posting.css
@@ -6,7 +6,7 @@ body, html{
     font-weight:400;
     line-height:1.8em;
     color: black;
-    background-image:url('../images/fancy-table-filtered.jpg') ;
+    background-image:url('../images/fancy-table-opaque.jpg') ;
     background-position:center;
     background-size:cover;
     background-repeat:no-repeat;
@@ -22,7 +22,7 @@ body, html{
       padding-bottom: 10%;
       padding-top: 5%;
       padding-bottom: 0%;
-      background: whitesmoke;
+      background:whitesmoke;
 
   }
 
@@ -88,6 +88,10 @@ body, html{
     margin-bottom: 0;
     padding-bottom: 0;
     color: black;
+  }
+
+  a.email {
+    text-decoration: none;
   }
 
 
