--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -93,7 +93,8 @@
 <label for="posting[location]">Location:</label>
 <input type="text" name="posting[location]"><br>
 <label for="posting[details]">Details:</label><br>
-<textarea name="posting[details]" rows="6" cols="80">  Please enter any details here...</textarea><br>
+<textarea name="posting[details]" rows="6" cols="80" placeholder="Please enter any details here..."></textarea>
+<br>
 <button type="submit" class="submit-button">SUBMIT</button>
 </form>
 <br>
