--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -10,7 +10,7 @@
 <body>
     <div class=job-card>
         <span class="title">
-             Cooney Consulting & Recruiting  
+             <h1>Cooney Consulting & Recruiting</h1>  
         </span>
         <div class="posting-area">
             <h2><%=@posting.title%> - <%=@posting.location%></h2>
