--- a/public/stylesheets/posting.css
+++ b/public/stylesheets/posting.css
@@ -43,16 +43,17 @@ body, html{
         padding-left: 1em;
         } 
   
-/* .job-card .title {
+.job-card .title h1{
     position:relative;
     font-size: 27px;
     letter-spacing: 8px;
     text-transform:uppercase;
-    width: 100;
+    width: 65%;
     background-color:#111;
     color: #fff;
-    padding:20px;
-  }  */
+    padding:2%;
+    margin-right: auto;
+  }  
 
   div.job-contact {
     position: relative;
@@ -108,22 +109,23 @@ body, html{
 
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
 
     body, html{
       background-attachment:scroll;
     }
     
-    div.job-card span.title {
+    /* .job-card .title h1{
         position:relative;
-        font-size: 12px;
-        letter-spacing: 3px;
+        font-size: 20px;
+        letter-spacing: 5px;
         text-transform:uppercase;
-        width: 100%;
+        width: 65%;
         background-color:#111;
-        color:red;
-        padding:20px;
-    } 
+        color: #fff;
+        padding:2%;
+        margin-right: auto;
+      } */
   
     
  
@@ -131,16 +133,23 @@ body, html{
   }
   
   
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 800px) {
   
     body, html{
       background-attachment:scroll;
     }
   
-    .title{
-      font-size: 13px;
-      letter-spacing: 2px;
-    }
+    .job-card .title h1{
+        position:relative;
+        font-size: 16px;
+        letter-spacing: 5px;
+        text-transform:uppercase;
+        width: 65%;
+        background-color:#111;
+        color: #fff;
+        padding:20px;
+        margin-right: auto;
+      }
   
 
   
